--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,22 @@
   "background_color": "#2196f3",
   "display": "minimal-ui",
   "orientation": "portrait",
-  "Scope": "/",
-  "start_url": "/transfermovil-web",
+  "Scope": "/transfermovil-web/",
+  "start_url": "/transfermovil-web/index.html",
   "icons": [
     {
-      "src": "asssets/images/icons/icon-72x72.png",
+      "src": "assets/images/icons/icon-72x72.png",
       "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/images/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/images/icons/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
